feat: change code search course to a badge

--- a/templates/default/search_courses.html.twig
+++ b/templates/default/search_courses.html.twig
@@ -42,7 +42,10 @@
                                 }) }}"
                                 target="_blank"
                         >
-                            {{ courseInfo.course.code }} - {{ courseInfo.title }}
+                            <span class="badge badge-primary mr-2">
+                                {{ courseInfo.course.code }}
+                            </span>
+                            {{ courseInfo.title }}
                         </a>
                     </div>
                 </div>
