--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base_layout.html.twig' %}
-{% set h1 = 'app.homepage.syllabus_list' %}
+{% set h1 = 'app.homepage.my_syllabus_list' %}
 {% block navbar %}
     <ul class="navbar-nav">
         <li class="nav-item">
