--- a/templates/default/search_courses.html.twig
+++ b/templates/default/search_courses.html.twig
@@ -9,7 +9,7 @@
                     <div class="container-fluid">
                         <div class="row mb-2">
                             <div class="col-sm-6">
-                                <h1 class="m-0 text-dark">{{ 'app.homepage.search_courses' | trans }}</h1>
+                                <h1 class="m-0 text-dark">{{ 'app.homepage.search_syllabus' | trans }}</h1>
                             </div><!-- /.col -->
 
                         </div><!-- /.row -->
