feat: amelioration moteur recherche
- Recherche possible avec plusieurs termes
- Plus besoin de passer l'année en paramètre de la méthode findByTitleOrCodeForCurrentYear du repo
- Optimisation de la requête en récupérant les champs que l'on souhaite (ajout d'un select)

--- a/templates/default/search_courses.html.twig
+++ b/templates/default/search_courses.html.twig
@@ -28,7 +28,7 @@
                             {% for courseInfo in courseInfosList %}
                                 <li class="list-group-item">
                                     <a href="{{ path('app.course_info.view.light_version', {'id': courseInfo.id}) }}" target="_blank">
-                                        <span class="badge badge-primary mr-2">{{ courseInfo.course.code }}</span>
+                                        <span class="badge badge-primary mr-2">{{ courseInfo.code }}</span>
                                         {{ courseInfo.title }}
                                     </a>
                                 </li>
