--- a/templates/default/search_courses.html.twig
+++ b/templates/default/search_courses.html.twig
@@ -25,6 +25,11 @@
                         <button type="submit" class="btn btn-block btn-info search-button">Lancer la recherche</button>
                         {{ form_end(form) }}
                     </div>
+                    <div class="d-flex justify-content-center my-2">
+                        {% if isSubmit == true %}
+                            {{ courseInfosList | length }} {{ 'app.homepage.syllabus_found' | trans }}
+                        {% endif %}
+                    </div>
                     <div class="mt-4">
                         <ul class="list-group">
                             {% for courseInfo in courseInfosList %}
@@ -49,7 +54,6 @@
         $(document).on('submit', '.form-search-courses', function(e){
             let $button = $($(this).find('button[type="submit"]'));
             $button.attr("disabled", true).html('<i class="fas fa-spinner fa-spin"></i>');
-            /*$button.attr("disabled", false).html('Lancer la recherche');*/
         });
     </script>
 {% endblock %}
