--- a/templates/partial/_homepage_sidebar.html.twig
+++ b/templates/partial/_homepage_sidebar.html.twig
@@ -11,6 +11,7 @@
         <li class="nav-item has-treeview">
             <a class="nav-link"
                href="{{ path('app.search_courses') }}"
+               target="_blank"
                id="menu-search-courses">
                 <i class="nav-icon fas fa-search"></i>
                 <p>{{ 'app.navbar.search_syllabus'|trans }}</p>
