--- a/templates/default/search_courses.html.twig
+++ b/templates/default/search_courses.html.twig
@@ -25,7 +25,7 @@
                         <button type="submit" class="btn btn-block btn-info search-button">Lancer la recherche</button>
                         {{ form_end(form) }}
                     </div>
-                    <div class="d-flex justify-content-center my-2">
+                    <div class="d-flex justify-content-center my-2 text-bold">
                         {% if isSubmit == true %}
                             {{ courseInfosList | length }} {{ 'app.homepage.syllabus_found' | trans }}
                         {% endif %}
