--- a/templates/lightVersion/light_layout.html.twig
+++ b/templates/lightVersion/light_layout.html.twig
@@ -38,7 +38,15 @@
                     {% endif %}
                 {% else %}
                     <span>
-                        {{ 'app.view.student.presentation.belong_to_multi' | trans }} <a href="#" data-toggle="modal" data-target="#EcueListUeModalLight">{{ courseInfo.course.parents.count }} UE</a>
+                        {% if courseInfo.course.parents.count == 0 and courseInfo.course.ects != 0 %}
+                        {{ 'app.view.student.presentation.belong_to_multi' | trans }} <a href="#" data-toggle="modal" data-target="#EcueListUeModalLight">
+                            Ce cours donne droit à {{ courseInfo.course.ects }} cours.
+                        </a>
+                        {% else %}
+                        {{ 'app.view.student.presentation.belong_to_multi' | trans }} <a href="#" data-toggle="modal" data-target="#EcueListUeModalLight">
+                                {{ courseInfo.course.parents.count }} {{ courseInfo.course.type }}
+                            </a>
+                        {% endif %}
                     </span>
                 {% endif %}
 
