--- a/templates/course_info_field/index.html.twig
+++ b/templates/course_info_field/index.html.twig
@@ -3,9 +3,10 @@
 
 {% block subContent %}
     <div class="card">
-        
+
         <div class="card-body">
-            {% if courseInfoFields %}
+            {% if formView.children is not empty %}
+                {{ form_start(formView)}}
                 <table class="table table-striped table-bordered table-responsive-sm">
                     <thead>
                     <tr>
@@ -16,48 +17,32 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for field in courseInfoFields %}
+                    {% for form in formView.children %}
                         <tr>
-                            {% set formView = form.createView %}
-                            {{ form_start(
-                                formView,
-                                {
-                                    'attr' : {
-                                        'data-url' : path('app.admin.course_info_field.edit', { 'id' : field.id }),
-                                        'id' : 'course-info-field-'~field.id
-                                    }
-                                }
-                            )}}
-                            <td>{{ field.label }}</td>
-                            <td>
-                                <div class="custom-control custom-switch">
-                                    {{ form_widget(formView.manuallyDuplication, { 'id' : formView.manuallyDuplication.vars.id ~ '_' ~ field.id, 'attr' : {
-                                        'class' : 'custom-control-input course-info-field-edit-ajax',
-                                        'checked' : field.manuallyDuplication,
-                                        'data-target' : '#course-info-field-'~field.id
-                                    } }) }}
-                                </div>
-                            </td>
-                            <td>
-                                <div class="custom-control custom-switch">
-                                    {{ form_widget(formView.automaticDuplication, { 'id' : formView.automaticDuplication.vars.id ~ '_' ~ field.id, 'attr' : {
-                                        'class' : 'custom-control-input course-info-field-edit-ajax',
-                                        'checked' : field.automaticDuplication,
-                                        'data-target' : '#course-info-field-'~field.id
-                                    } }) }}
-                                </div>
-                            </td>
-                            <td>
-                                <div class="custom-control custom-switch">
-                                    {{ form_widget(formView.import, { 'id' : formView.import.vars.id ~ '_' ~ field.id, 'attr' : {
-                                        'class' : 'custom-control-input course-info-field-edit-ajax',
-                                        'checked' : field.import,
-                                        'data-target' : '#course-info-field-'~field.id
-                                    } }) }}
-                                </div>
-                            </td>
-                            {{ form_widget(formView._token, { 'id' : formView._token.vars.id ~ '_' ~ field.id }) }}
-                            {{ form_end(formView) }}
+                            {% if form.children is not empty %}
+                            <td>{{ form.vars.label }}</td>
+                                <td>
+                                    <div class="custom-control custom-switch">
+                                        {{ form_widget(form.manuallyDuplication, {'attr' : {
+                                            'class' : 'custom-control-input'
+                                        } }) }}
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="custom-control custom-switch">
+                                        {{ form_widget(form.automaticDuplication, {'attr' : {
+                                            'class' : 'custom-control-input'
+                                        } }) }}
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="custom-control custom-switch">
+                                        {{ form_widget(form.import, {'attr' : {
+                                            'class' : 'custom-control-input'
+                                        } }) }}
+                                    </div>
+                                </td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -65,6 +50,8 @@
             {% else %}
                 <div class="alert alert-info">{{ 'admin.course_info_field.empty_field' | trans }}</div>
             {% endif %}
+            <button type="submit" class="btn btn-primary float-right">{{ 'admin.button.save' | trans }}</button>
+            {{ form_end(formView) }}
         </div>
     </div>
 {% endblock %}
